--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,6 @@
 403.message     = Página não autorizada para o usuário logado.
 404.error       = Página não encontrada.
 404.message     = A url para a página não existe.
-default.error   = Proposta repetida.
-default.message = Você já possui uma proposta para este carro.
+default.error   = Erro interno.
+default.message = Erro interno.
 previous.message = Voltar a página anterior 
