Setup de internacionalização

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,5 @@
 default.error   = Erro interno.
 default.message = Erro interno.
 previous.message = Voltar a página anterior 
+buy.message = Comprar
+sell.message = Vender
