--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,75 @@ default.message = Erro interno.
 previous.message = Voltar a página anterior 
 buy.message = Comprar
 sell.message = Vender
+contact.message = Contato
+title_list_car.message = Car list
+search_car.message = Busca carro
+send_btn.message = Buscar
+adm_page.message = Página do Administrador
+list_users.message = Listar Usuários
+list_stores.message = Listar Lojas
+crud_stores.message =  CRUD Lojas
+crud_user.message = CRUD Usuário
+add_user_store.message = Adicionar usuário/loja
+quit.message = Sair
+
+manage_users.message = Gerenciar Usuários
+username.message = Usuário
+cpf.message = CPF
+cpf_cnpj.message = CPF/CNPJ
+name.message = Nome
+telephone.message = Telefone
+sex.message = Sexo
+birth.message = Data de nascimento  
+role.message = Papel
+action.message = Ação
+edit.message = Editar
+delete.message = Deletar
+
+list_stores_title.message = Listar lojas
+manage_stores.message = Gerenciamento de Lojas
+description.message = Descrição 
+
+register_users.message = Registrar Usuários
+description_store.message = Descrição da loja
+save.message = Salvar
+
+user_menu.message = Menu do Usuário
+user_page.message = Página do Usuário
+hello.message = Olá
+list_proposal.message = Lista de Propostas
+
+back.message = Voltar
+value.message = Valor
+condition.message = Condição
+date.message = Data
+car.message = Carro
+status.message = Status
+
+already_proposal.message = Você já fez uma proposta para este carro
+proposal_register.message = Registro de Propostas
+proposal_manage.message = Gerenciamento de Propostas
+
+login_page.message = Página de Login
+password.message = Senha
+next.message = Próximo 
+
+refuse.message = Recusar
+accept.message = Aceitar
+
+menu_store.message = Menu da Loja
+store_page.message = Página da Loja
+add_photo.message = Adicionar Foto
+your_cars.message = Seus Carros
+plate.message = Placa
+model.message = Modelo
+chassi.message = Chassi
+year.message = Ano
+km.message = KM
+price.message = Preço
+
+car_manage.message = Gerenciamento de Carro
+car_description.message = Descrição do Carro
+
+store.message = Loja
+add_car.message = Adicionar Carro
