--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,3 +7,75 @@ default.message = Internal Error.
 previous.message = Return to previous page
 buy.message = Buy
 sell.message = Sell
+contact.message = Contact
+title_list_car.message = Lista de carros
+search_car.message = Search car
+send_btn.message = Search
+adm_page.message = Admin Page
+list_users.message = List Users
+list_stores.message = List Stores
+crud_stores.message =  CRUD Stores
+add_user_store.message = Add Users/Stores
+quit.message = Quit
+crud_user.message = CRUD Users
+
+manage_users.message = User Management
+username.message = Username
+cpf.message = CPF
+cpf_cnpj.message = CPF/CNPJ
+name.message = Name
+telephone.message = Telephone
+sex.message = Sex
+birth.message = Birth Date 
+role.message = Role
+action.message = Action
+edit.message = Edit
+delete.message = Delete
+
+list_stores_title.message = List Stores
+manage_stores.message = Store Management
+description.message = Description 
+
+register_users.message = Register Users
+description_store.message = Description Store
+save.message = Save
+
+user_menu.message = User Menu
+user_page.message = User Page
+hello.message = Hello
+list_proposal.message = Proposal List
+
+back.message = Back
+value.message = Value
+condition.message = Condition
+date.message = Date
+car.message = Car
+status.message = Status
+
+already_proposal.message = You already made a proposal for this car
+proposal_register.message = Proposal Registers
+proposal_manage.message = Proposal Management
+
+login_page.message = Login Page
+password.message = Password
+next.message = Next
+
+refuse.message = Refuse 
+accept.message = Accept
+
+menu_store.message = Store Menu 
+store_page.message = Store Page
+add_photo.message = Add Photo 
+your_cars.message = Your Cars 
+plate.message = Plate 
+model.message = Model 
+chassi.message = Chassi 
+year.message = Year 
+km.message = KM 
+price.message = Price 
+
+car_manage.message = Car Management
+car_description.message = Car description
+
+store.message = Store
+add_car.message = Add Car
