Atualizando o css e html. Co-authored-by: Matheus Negrisolli Rosa Seixas  <iMaGiKzZ@users.noreply.github.com>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -76,6 +76,7 @@ price.message = Preço
 
 car_manage.message = Gerenciamento de Carro
 car_description.message = Descrição do Carro
+car_register.message = Cadastro de Carro
 
 store.message = Loja
 add_car.message = Adicionar Carro
