--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -53,7 +53,7 @@ car.message = Car
 status.message = Status
 
 already_proposal.message = You already made a proposal for this car
-proposal_register.message = Proposal Registers
+proposal_register.message = Proposal Registration
 proposal_manage.message = Proposal Management
 
 login_page.message = Login Page
@@ -76,6 +76,7 @@ price.message = Price
 
 car_manage.message = Car Management
 car_description.message = Car description
+car_register.message = Car Registration
 
 store.message = Store
 add_car.message = Add Car
